--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link href="https://fonts.googleapis.com/css?family=Righteous:regular" rel="stylesheet" />
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -40,7 +39,9 @@
 
     <div class="holder">
         <header>Input Test</header>
-        <input></input> 
+        <input>
+        <input type="text" placeholder="Text Input"></input>
+        </input> 
     </div>    
 
     <div class="holder">
@@ -62,6 +63,9 @@
 
     <footer>
         <footer-h1>TEATIME DESIGNS</footer-h1>
+        <footer-h2>© 2023</footer-h2> 
+        
+        <a href="#">Impressum</a>
     </footer>
 
 </body>
