[+] Logo Image [+] Logo in Header [+] Tags added [/] Renamed components [/] Footer Redesigned

--- a/index.html
+++ b/index.html
@@ -5,15 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>TEATIME TEST PAGE</title>
+    <link rel="icon" type="image/x-icon" href="teatime.png">
+    <title>TLib Testing Page</title>
 </head>
 <body>
    
     <div class="holder">
-        <h1>TEATIME UI TEST PAGE</h1>
+        <img class="logo" src="teatime.png" alt="teatimelogo"> 
+        <h1>TLib Testing Page</h1>
         <a href="#">GitHub</a>
-        <a href="https://www.instagram.com/lukas.tee42/">Instagram</a>
-        <a href="#">Portfolio</a>
+        <a href="#">Discord</a>
+    </div>
+
+    <div class="holder">
+        <header>Information</header>
+        <p>TLib is an open-source CSS framework commonly used by TEATIME Designs. It provides pre-designed styles and components for building websites. The framework has an active Discord community for support and collaboration. Developers can also report issues on GitHub for prompt resolution.TLib is an open-source CSS framework commonly used by TEAMTIME Designs. It provides pre-designed styles and components for building websites. The framework has an active Discord community for support and collaboration. Developers can also report issues on GitHub for prompt resolution.</p>
     </div>
 
 
@@ -29,8 +35,16 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, voluptatum.</p>
 
         <a href="#">Lorem Ipsum</a>
-
     </div>    
+
+    <div class="holder">
+        <header>Tag Test</header>
+
+
+        <tag-red>Test</tag-red>
+        <tag-blue>Test</tag-blue>
+        <tag-green>Test</tag-green>
+    </div>
 
     <div class="holder">
         <header>Holder Test</header>
@@ -45,6 +59,12 @@
     </div>    
 
     <div class="holder">
+        <header>Text Area Test</header>
+
+        <textarea name="textarea" id="textarea" cols="30" rows="10"></textarea>
+    </div>
+
+    <div class="holder">
         <header>Button Test</header>
         <button>Submit</button>
     </div>
@@ -57,14 +77,31 @@
             <card-h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse commodo enim vel quam tempor, id rutrum lacus dictum. Etiam rhoncus at est ut ornare. Integer ornare consequat tincidunt. In hac habitasse platea dictumst. In vel tristique nunc. Donec eget nisl et nulla ultrices posuere eget quis magna.</card-h2>
         </div>
         <div class="card">Dies ist ein Kartenbeispiel Text, Hallo Mama</div>
-        <div class="card">Dies ist ein Kartenbeispiel Text, Hallo Mamac </div>
+        <div class="card">Dies ist ein Kartenbeispiel Text, Hallo Mama </div>
         </div>
+    </div>
+
+
+    <div class="holder">
+        <tag-red>W.I.P</tag-red> 
+        <header>Contact Form Test</header>
+        <div class="cardholder">
+            <div class="card">
+                <card-h1>Contact Form</card-h1>
+                <form action="index.php" method="post">
+                    <input type="text" name="name" placeholder="Name">
+                    <input type="text" name="email" placeholder="Email">
+                    <textarea name="Test" id="test" cols="20" rows="3"></textarea>
+                    <button type="submit" name="submit">Submit</button>
+                </form>
+            </div>
+        </div>
+
     </div>
 
     <footer>
         <footer-h1>TEATIME DESIGNS</footer-h1>
         <footer-h2>© 2023</footer-h2> 
-        
         <a href="#">Impressum</a>
     </footer>
 
