[/] Changed the use of Outlines

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
    
-    <div class="holder">
+    <div class="siteheader">
         <img class="logo" src="teatime.png" alt="teatimelogo"> 
         <h1>TLib Testing Page</h1>
         <a href="#">GitHub</a>
@@ -26,7 +26,7 @@
     <div class="holder">
         <header>Text Test</header>
 
-        <h1>Lorem Ipsum</h1>
+        <h1>Lorem Ipsum I</h1>
         <h2>Lorem Ipsum II</h2>
         <h3>Lorem Ipsum III</h3>
         <h4>Lorem Ipsum IV</h4>
