--- a/index.html
+++ b/index.html
@@ -38,12 +38,15 @@
     </div>    
 
     <div class="holder">
-        <header>Tag Test</header>
-
-
+        <header>
         <tag-red>Test</tag-red>
         <tag-blue>Test</tag-blue>
         <tag-green>Test</tag-green>
+        󠀠
+    </header>
+
+
+
     </div>
 
     <div class="holder">
@@ -83,8 +86,9 @@
 
 
     <div class="holder">
-        <tag-red>W.I.P</tag-red> 
-        <header>Contact Form Test</header>
+        <header><tag-red>W.I.P</tag-red> 
+
+            Contact Form Test</header>
         <div class="cardholder">
             <div class="card">
                 <card-h1>Contact Form</card-h1>
