--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <tag-red>Test</tag-red>
         <tag-blue>Test</tag-blue>
         <tag-green>Test</tag-green>
-        󠀠
+        Tag Test
     </header>
 
 
