[+] Changelog Page [/] Pressing the Logo redirects you to the Main Page

--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
 <body>
    
     <div class="siteheader">
-        <img class="logo" src="teatime.png" alt="teatimelogo"> 
+        <a href="index.html" style="border-color: #f1f0eb00;"> <img class="logo" src="teatime.png" alt="teatimelogo" href="index.html"></a>
         <h1>TLib Testing Page</h1>
         <a href="#">GitHub</a>
         <a href="#">Discord</a>
+        <a href="changelog.html" target="_blank">Changelog</a>
     </div>
 
     <div class="holder">
@@ -42,6 +43,7 @@
         <tag-red>Test</tag-red>
         <tag-blue>Test</tag-blue>
         <tag-green>Test</tag-green>
+        <tag-yellow>Test</tag-yellow>
         Tag Test
     </header>
 
