[+] Header added to Changelogs [/] Updated Vars [/] Updated CSS [/] Changelog Information changed

--- a/changelog.html
+++ b/changelog.html
@@ -21,10 +21,11 @@
 
     <div class="holder">
         <header>Information</header>
-        <p>TLib is an open-source CSS framework commonly used by TEATIME Designs. It provides pre-designed styles and components for building websites. The framework has an active Discord community for support and collaboration. Developers can also report issues on GitHub for prompt resolution.TLib is an open-source CSS framework commonly used by TEAMTIME Designs. It provides pre-designed styles and components for building websites. The framework has an active Discord community for support and collaboration. Developers can also report issues on GitHub for prompt resolution.</p>
+        <p>This page only documents major updates, which represent significant changes and advancements in various fields. Our focus is to provide concise and focused information on noteworthy events and developments. For a comprehensive understanding, we encourage exploring other reliable sources that cover both major and minor updates.This page only documents major updates, which represent significant changes and advancements in various fields. Our focus is to provide concise and focused information on noteworthy events and developments. For a comprehensive understanding, we encourage exploring other reliable sources that cover both major and minor updates.</p>
     </div>
 
     <div class="holder">
+        <header>Changelog History</header>
         <div class="cardholder">
             <div class="card">
                 <card-h1>
