[/] Header Update - I guess lol

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
    
     <div class="siteheader">
         <a href="index.html" style="border-color: #f1f0eb00;"> <img class="logo" src="teatime.png" alt="teatimelogo" href="index.html"></a>
-        <h1>TLib Testing Page</h1>
+        <h1-header>TLib Testing Page</h1-header>
         <a href="#">GitHub</a>
         <a href="#">Discord</a>
         <a href="changelog.html" target="_blank">Changelog</a>
@@ -91,9 +91,21 @@
         <div class="card">
             <card-h1>Card Title </card-h1>
             <card-h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse commodo enim vel quam tempor, id rutrum lacus dictum. Etiam rhoncus at est ut ornare. Integer ornare consequat tincidunt. In hac habitasse platea dictumst. In vel tristique nunc. Donec eget nisl et nulla ultrices posuere eget quis magna.</card-h2>
+            <card-footer>This is a Footer</card-footer>
         </div>
-        <div class="card">Dies ist ein Kartenbeispiel Text, Hallo Mama</div>
-        <div class="card">Dies ist ein Kartenbeispiel Text, Hallo Mama </div>
+
+        <div class="card">
+            <card-h1>Card Title </card-h1>
+            <card-h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse commodo enim vel quam tempor, id rutrum lacus dictum. Etiam rhoncus at est ut ornare. Integer ornare consequat tincidunt. In hac habitasse platea dictumst. In vel tristique nunc. Donec eget nisl et nulla ultrices posuere eget quis magna.</card-h2>
+            <card-footer>This is a Footer</card-footer>
+        </div>
+        
+        <div class="card">
+            <card-h1>Card Title </card-h1>
+            <card-h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse commodo enim vel quam tempor, id rutrum lacus dictum. Etiam rhoncus at est ut ornare. Integer ornare consequat tincidunt. In hac habitasse platea dictumst. In vel tristique nunc. Donec eget nisl et nulla ultrices posuere eget quis magna.</card-h2>
+            <card-footer>This is a Footer</card-footer>
+        </div>
+        
         </div>
     </div>
 
