Alignment of the Test Page changed

--- a/changelog.html
+++ b/changelog.html
@@ -10,13 +10,14 @@
     <title>TLib Changelog</title>
 </head>
 <body>
-   
+
+    <div class="content">
+    
     <div class="siteheader">
-        <a href="index.html" style="border-color: #f1f0eb00;"> <img class="logo" src="teatime.png" alt="teatimelogo" href="index.html"></a>
-        <h1>TLib Changelog</h1>
-        <a href="#">GitHub</a>
-        <a href="#">Discord</a>
-        <a href="changelog.html" target="_blank">Changelog</a>
+        <h1-header>TLib Testing Page</h1-header>
+        <li><a href="#">Discord</a></li>
+        <li><a href="#">GitHub</a></li>
+        <li><a href="/changelog.html" target="_blank">Changelog</a></li>
     </div>
 
     <div class="holder">
@@ -26,7 +27,7 @@
 
     <div class="holder">
         <header>Changelog History</header>
-        <div class="cardholder">
+        <div class="grid">
             <div class="card">
                 <card-h1>
                     <tag-yellow>v.1.10</tag-yellow>
@@ -35,7 +36,6 @@
                     <card-h2>[+] Lorem Ipsum</card-h2>   
                     <card-h2>[+] Lorem Ipsum</card-h2>
                     <card-h2>[+] Lorem Ipsum</card-h2>
-                    <card-footer>More Information on the Official Discord</card-footer>
             </div>
             
             <div class="card">                
@@ -46,7 +46,6 @@
                     <card-h2>[+] Lorem Ipsum</card-h2>   
                     <card-h2>[+] Lorem Ipsum</card-h2>
                     <card-h2>[+] Lorem Ipsum</card-h2>
-                    <card-footer>More Information on the Official Discord</card-footer>
             </div>
 
             <div class="card">
@@ -57,7 +56,6 @@
                     <card-h2>[+] Lorem Ipsum</card-h2>   
                     <card-h2>[+] Lorem Ipsum</card-h2>
                     <card-h2>[+] Lorem Ipsum</card-h2>
-                    <card-footer>More Information on the Official Discord</card-footer>
             </div>
 
             <div class="card">
@@ -68,7 +66,6 @@
                     <card-h2>[+] Lorem Ipsum</card-h2>   
                     <card-h2>[+] Lorem Ipsum</card-h2>
                     <card-h2>[+] Lorem Ipsum</card-h2>
-                    <card-footer>More Information on the Official Discord</card-footer>
             </div>
 
 
@@ -80,7 +77,6 @@
                     <card-h2>[+] Lorem Ipsum</card-h2>   
                     <card-h2>[+] Lorem Ipsum</card-h2>
                     <card-h2>[+] Lorem Ipsum</card-h2>
-                    <card-footer>More Information on the Official Discord</card-footer>
             </div>
 
             <div class="card">
@@ -91,16 +87,19 @@
                     <card-h2>[+] Lorem Ipsum</card-h2>   
                     <card-h2>[+] Lorem Ipsum</card-h2>
                     <card-h2>[+] Lorem Ipsum</card-h2>
-                    <card-footer>More Information on the Official Discord</card-footer>
             </div>
         </div>
     </div>
+
 
     <footer>
         <footer-h1>TEATIME DESIGNS</footer-h1>
         <footer-h2>© 2023</footer-h2> 
         <a href="#">Impressum</a>
     </footer>
+
+    </div>
+
 
 </body>
 </html>
