--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="siteheader">
         <h1-header>TLib Testing Page</h1-header>
         <li><a href="#">Discord</a></li>
-        <li><a href="#">GitHub</a></li>
+        <li><a href="/test/contactpage.html" target="_blank">GitHub</a></li>
         <li><a href="/changelog.html" target="_blank">Changelog</a></li>
     </div>
 
