--- a/index.html
+++ b/index.html
@@ -6,12 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/x-icon" href="teatime.png">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css">
     <title>TLib | UI Test</title>
+
 </head>
+
 <body>
+
+
 <div class="content">
 
-    
     <div class="siteheader">
         <h1-header>TLib Testing Page</h1-header>
         <li><a href="#">Discord</a></li>
@@ -20,7 +24,7 @@
     </div>
 
 
-    <div class="holder">
+    <div class="holder info" style="text-align:justify">
         <header>Information</header>
         <p>TLib is an open-source CSS framework commonly used by TEATIME Designs. It provides pre-designed styles and components for building websites. The framework has an active Discord community for support and collaboration. Developers can also report issues on GitHub for prompt resolution.TLib is an open-source CSS framework commonly used by TEAMTIME Designs. It provides pre-designed styles and components for building websites. The framework has an active Discord community for support and collaboration. Developers can also report issues on GitHub for prompt resolution.</p>
     </div>
@@ -72,17 +76,23 @@
     <div class="holder">
         <header>Button Test</header>
         <button>Submit</button>
-        <button>Button 2</button>
+        <button class="red">Button 2</button>
+        <button class="blue">Button 3</button>
+        <button class="green">Button 4</button>
+        <button class="yellow">Button 5</button>
     </div>
 
     <div class="holder">
         <header>Dropdown Test</header>
-        <select name="Test" id="Test">
-            <option value="Test">Test</option>
-            <option value="Test">Test</option>
-            <option value="Test">Test</option>
-            <option value="Test">Test</option>
-        </select>
+
+        <div class="dropdown">
+            <select name="dropdown" id="dropdown">
+                <option value="1">Dropdown 1</option>
+                <option value="2">Dropdown 2</option>
+                <option value="3">Dropdown 3</option>
+            </select>
+        </div>
+
     </div>
 
     <div class="holder">
