new Navbar (wip)

--- a/index.html
+++ b/index.html
@@ -13,25 +13,37 @@
 
 <body>
 
-    
 
+
+
+<nav>
+    <header style="text-align: center;">TLib</header>
+  <ul>
+    <li><a href="#">Home</a></li>
+    <li><a href="#">About</a></li>
+    <li><a href="#">Services</a></li>
+    <li><a href="#">Contact</a></li>
+  </ul>
+  <header style="text-align: center; font-size: small;">Waiting and Drinking Tea</header>
+</nav>
 
 
 <div class="content">
 
-    <div class="siteheader">
-        <h1-header>TLib Testing Page</h1-header>
-        <li><a href="#">Discord</a></li>
-        <li><a href="/test/contactpage.html" target="_blank">GitHub</a></li>
-        <li><a href="/changelog.html" target="_blank">Changelog</a></li>
-    </div>
+
 
 
     <div class="holder info" style="text-align:justify">
         <header>Information</header>
-        <p>TLib is an open-source CSS framework commonly used by TEATIME Designs. It provides pre-designed styles and components for building websites. The framework has an active Discord community for support and collaboration. Developers can also report issues on GitHub for prompt resolution.TLib is an open-source CSS framework commonly used by TEAMTIME Designs. It provides pre-designed styles and components for building websites. The framework has an active Discord community for support and collaboration. Developers can also report issues on GitHub for prompt resolution.</p>
+        <p>TLib is an open-source CSS framework commonly used by TEATIME Designs. It provides pre-designed styles and components for building websites. The framework has an active Discord community for support and collaboration. Developers can also report issues on GitHub for prompt resolution.TLib is an open-source CSS framework commonly used by TEAMTIME Designs. It provides pre-designed styles and components for building websites. The framework has an active Discord community for support and collaboration. Developers can also report issues on GitHub for prompt resolution.</p>    
     </div>
 
+    <div class="holder">
+        <header>Elements / Testpages</header>
+
+
+        <button><a href="/test/contactpage.html" target="_blank">contactpage</a></button>
+    </div>
 
     <div class="holder">
         <header>Text Test</header>
