--- a/index.html
+++ b/index.html
@@ -14,23 +14,16 @@
 <body>
 
 
+    <div class="sidenav">
+        <h3 style="text-align: center;background-color: var(--holdercoltrans)">Element Navigation</h3>
+        <a href="#home">Button</a>
+        <a href="#about">About</a>
+        <a href="#contact">Contact</a>
+    </div>
 
 
-<nav>
-    <header style="text-align: center;">TLib</header>
-  <ul>
-    <li><a href="#">Home</a></li>
-    <li><a href="#">About</a></li>
-    <li><a href="#">Services</a></li>
-    <li><a href="#">Contact</a></li>
-  </ul>
-  <header style="text-align: center; font-size: small;">Waiting and Drinking Tea</header>
-</nav>
 
-
-<div class="content">
-
-
+    <div class="main">
 
 
     <div class="holder info" style="text-align:justify">
