new Buttons, Navbar and other

--- a/index.html
+++ b/index.html
@@ -13,17 +13,13 @@
 
 <body>
 
-
-    <div class="sidenav">
-        <h3 style="text-align: center;background-color: var(--holdercoltrans)">Element Navigation</h3>
-        <a href="#home">Button</a>
-        <a href="#about">About</a>
-        <a href="#contact">Contact</a>
+    <div class="nav">
+        <h1>TLib - Test Page</h1>
+        <a href="#" target="_blank">Discord</a>
+        <a href="#" target="_blank">GitHub</a>
+        <a href="/changelog.html" target="_blank">Changelog</a>
     </div>
 
-
-
-    <div class="main">
 
 
     <div class="holder info" style="text-align:justify">
@@ -149,6 +145,5 @@
         <a href="#">Impressum</a>
     </footer>
     
-</div>
 </body>
 </html>
