--- a/index.html
+++ b/index.html
@@ -103,35 +103,12 @@
         <header>Grid Test</header>
         <div class="grid">
 
-            <div class="card">
-                <card-h1>Card Title </card-h1>
-                <card-h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse commodo enim vel quam tempor, id rutrum lacus dictum. Etiam rhoncus at est ut ornare. Integer ornare consequat tincidunt. In hac habitasse platea dictumst. In vel tristique nunc. Donec eget nisl et nulla ultrices posuere eget quis magna.</card-h2>
-                <div class="card-footer">
-                    <p>This is a Footer</p>
-                </div>
-            </div>
 
             <div class="card">
-                <card-h1>Card Title </card-h1>
-                <card-h2>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.endisse commodo enim veldddddddddddd quam tempor, id rutrum lacus dictum. Etiam rhoncus at est ut ornare. Integer ornare consequat tincidunt. In hac habitasse platea dictumst. In vel tristique nunc. Donec eget nisl et nulla ultrices posuere eget quis magna.</card-h2>
-                <div class="card-footer">
-                    <p>This is a Footer</p>
-                </div>
-            </div>
-
-            <div class="card">
-                <card-h1>Card Title </card-h1>
-                <card-h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse commodo enim vel quam tempor, id rutrum lacus dictum. Etiam rhoncus at est ut ornare. Integer ornare consequat tincidunt. In hac habitasse platea dictumst. In vel tristique nunc. Donec eget nisl et nulla ultrices posuere eget quis magna.</card-h2>
-                <div class="card-footer">
-                    <button class="card-button">Card Button</button>
-                </div>
-            </div>
-
-            <div class="card">
-                <card-h1>Card Title </card-h1>
-                <card-h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse commodo enim vel quam tempor, id rutrum lacus dictum. Etiam rhoncus at est ut ornare. Integer ornare consequat tincidunt. In hac habitasse platea dictumst. In vel tristique nunc. Donec eget nisl et nulla ultrices posuere eget quis magna.</card-h2>
-                <div class="card-footer">
-                    <p>This is a Footer</p>
+                <h1>Card Title </h1>
+                <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse commodo enim vel quam tempor, id rutrum lacus dictum. Etiam rhoncus at est ut ornare. Integer ornare consequat tincidunt. In hac habitasse platea dictumst. In vel tristique nunc. Donec eget nisl et nulla ultrices posuere eget quis magna.</h2>
+                <div class="footer">
+                    <a href="#">Test</a>
                 </div>
             </div>
 
@@ -142,6 +119,7 @@
     <footer>
         <footer-h1>Lukas Swirski</footer-h1>
         <footer-h2>© 2023</footer-h2> 
+
         <a href="#">Impressum</a>
     </footer>
     
